Setup project env and db config, some formatting

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -9,5 +9,10 @@ services:
     ports:
       - 8888:8888
       - 9229:9229
-    ## set your startup file here
     command: node --inspect app.js
+    links:
+      - mongo
+  mongo:
+    image: mongo
+    ports:
+    - 27017:27017
