--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
       NODE_ENV: production
     ports:
       - 8888:8888
+    links:
+      - mongo
+  mongo:
+    image: mongo
+    ports:
+      - 27017:27017
