--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
-node_modules
+node_modules/
+data/
+docker/
 npm-debug.log
 Dockerfile*
 docker-compose*
 .dockerignore
-.git
+.git/
 .gitignore
 .env
 */bin
