--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "sudo node app.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,12 @@
   },
   "homepage": "https://github.com/kachow6/BeautiPI#readme",
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mongodb": "^3.1.13"
+    "mocha": "^6.0.2",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.17"
   }
 }
