--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,10 +3,5 @@ sut:
   command: npm test
 mongo:
   image: mongo
-  env_file:
+  environment:
       - .env
-    volumes:
-      - ".${MONGO_DATA_DIR}:${MONGO_DATA_DIR}"
-    expose:
-      - 27017
-    command: "mongod --smallfiles --logpath=${MONGO_LOG_FILE}"
