--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,3 +1,21 @@
 sut:
   build: .
+  env_file:
+    - .env
+  environment:
+    WAIT_HOSTS: mongo:27017
+  ports:
+    - ${PORT}:${PORT}
+    - 9229:9229
   command: npm test
+
+services:
+ mongo:
+    image: mongo
+    env_file:
+      - .env
+    volumes:
+      - ".${MONGO_DATA_DIR}:${MONGO_DATA_DIR}"
+    expose:
+      - 27017
+    command: "mongod --smallfiles --logpath=${MONGO_LOG_FILE}"
