--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,7 +3,7 @@ sut:
   environment:
     - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME} 
     - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-    - MONGO_TEST_DB_NAME=${test}
+    - MONGO_TEST_DB_NAME=${MONGO_TEST_DB_NAME}
     WAIT_HOSTS: mongo:27017
   ports:
     - ${PORT}:${PORT}
