--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,9 +1,9 @@
 sut:
   build: .
   environment:
-    - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME} 
-    - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-    - MONGO_TEST_DB_NAME=${MONGO_TEST_DB_NAME}
+    MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME} 
+    MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    MONGO_TEST_DB_NAME: ${MONGO_TEST_DB_NAME}
     WAIT_HOSTS: mongo:27017
   ports:
     - ${PORT}:${PORT}
