--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     env_file:
       - .env
     environment:
-      NODE_ENV: development #production
+      NODE_ENV: production
       WAIT_HOSTS: mongo:27017
     ports:
       - ${PORT}:${PORT}
